--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="button_bg_gradient_start">#FF40C4FF</color>
     <color name="button_bg_gradient_end">#FF03A9F4</color>
     <color name="google_blue">#4285F4</color>
+    <color name="grey">#808080</color>
+    <color name="snack_bar_bg">#2D2C30</color>
+    <color name="bw_light">#FFFFFFFF</color>
+    <color name="popup_menu_bg">#FFFFFFFF</color>
+    <color name="bottom_nav_active_indicator">#03A9F4</color>
+    <color name="bottom_nav_bg">#FFFFFF</color>
 </resources>
