--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,4 +8,6 @@
     <color name="bw_light">#1A1D22</color>
     <color name="popup_menu_bg">#4A4B62</color>
     <color name="bottom_nav_bg">#393A4C</color>
+    <color name="user_register_header_bg_main">#C4EDFF</color>
+    <color name="user_register_header_bg_stroke">#2C2D3A</color>
 </resources>
