--- a/app/src/main/res/navigation/auth_nav.xml
+++ b/app/src/main/res/navigation/auth_nav.xml
@@ -33,8 +33,8 @@
     </fragment>
     <fragment
         android:id="@+id/userRegisterDetailsFragment"
-        android:name="com.sougata.chatly.auth.ui.UserRegisterDetailsFragment"
+        android:name="com.sougata.chatly.auth.ui.UserDetailsFormFragment"
         android:label="fragment_user_register_details"
-        tools:layout="@layout/fragment_user_register_details"/>
+        tools:layout="@layout/fragment_user_details_form"/>
 
 </navigation>
