Fixed user details form validators and reduced alpha of email field

--- a/app/src/main/res/layout/fragment_user_details_form.xml
+++ b/app/src/main/res/layout/fragment_user_details_form.xml
@@ -126,6 +126,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
                         android:hint="Email"
+                        android:alpha="0.5"
                         app:boxStrokeColor="@color/edit_text_box_stroke"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/bw"
