--- a/app/src/main/res/layout/item_text_only_private_message_sender.xml
+++ b/app/src/main/res/layout/item_text_only_private_message_sender.xml
@@ -37,10 +37,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                tools:text="12-07-2025 10:25"
                 android:layout_marginTop="8dp"
                 android:textColor="@color/white"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                tools:text="12-07-2025 10:25" />
 
         </LinearLayout>
     </LinearLayout>
