--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,10 @@
         <item name="android:textColor">@color/bw_light</item>
     </style>
 
+    <style name="messagesTitleTextStyle" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/bw</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
 </resources>
