--- a/app/src/main/res/layout/item_text_only_private_message_receiver.xml
+++ b/app/src/main/res/layout/item_text_only_private_message_receiver.xml
@@ -6,7 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="30dp"
         android:gravity="start">
 
