--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -8,7 +8,15 @@
         android:id="@+id/chatsHomeFragment"
         android:name="com.sougata.chatly.features.chats.ui.ChatsHomeFragment"
         android:label="fragment_chats_home"
-        tools:layout="@layout/fragment_chats_home" />
+        tools:layout="@layout/fragment_chats_home">
+        <action
+            android:id="@+id/action_chatsHomeFragment_to_privateMessagesFragment"
+            app:destination="@id/privateMessagesFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
     <fragment
         android:id="@+id/groupsHomeFragment"
         android:name="com.sougata.chatly.features.groups.GroupsHomeFragment"
@@ -24,4 +32,9 @@
         android:name="com.sougata.chatly.features.more.MoreHomeFragment"
         android:label="fragment_more_home"
         tools:layout="@layout/fragment_more_home" />
+    <fragment
+        android:id="@+id/privateMessagesFragment"
+        android:name="com.sougata.chatly.features.chats.ui.PrivateMessagesFragment"
+        android:label="fragment_private_messages"
+        tools:layout="@layout/fragment_private_messages" />
 </navigation>
