Implemented realtime updates for private message home and message section

--- a/app/src/main/res/layout/fragment_private_messages.xml
+++ b/app/src/main/res/layout/fragment_private_messages.xml
@@ -35,10 +35,10 @@
             app:layout_constraintTop_toBottomOf="@id/toolBar">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/ivProfileImage"
+                android:id="@+id/ivOtherUserProfileImage"
                 android:layout_width="42dp"
                 android:layout_height="42dp"
-                android:src="@drawable/ic_user_placeholder"
+                tools:src="@drawable/ic_user_placeholder"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -49,24 +49,24 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="Sougata Saha"
+                tools:text="Sougata Saha"
                 android:textColor="@color/bw"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/tvOtherUserContact"
                 app:layout_constraintEnd_toStartOf="@id/btnVideoCall"
-                app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
-                app:layout_constraintTop_toTopOf="@id/ivProfileImage"
+                app:layout_constraintStart_toEndOf="@+id/ivOtherUserProfileImage"
+                app:layout_constraintTop_toTopOf="@id/ivOtherUserProfileImage"
                 app:layout_constraintVertical_chainStyle="spread_inside" />
 
             <TextView
                 android:id="@+id/tvOtherUserContact"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="6296320657"
+                tools:text="6296320657"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@id/ivProfileImage"
+                app:layout_constraintBottom_toBottomOf="@id/ivOtherUserProfileImage"
                 app:layout_constraintEnd_toEndOf="@id/tvOtherUserName"
                 app:layout_constraintStart_toStartOf="@id/tvOtherUserName"
                 app:layout_constraintTop_toBottomOf="@id/tvOtherUserName" />
@@ -78,10 +78,10 @@
                 android:layout_marginStart="12dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@drawable/ic_video_call"
-                app:layout_constraintBottom_toBottomOf="@id/ivProfileImage"
+                app:layout_constraintBottom_toBottomOf="@id/ivOtherUserProfileImage"
                 app:layout_constraintEnd_toStartOf="@id/btnAudioCall"
                 app:layout_constraintStart_toEndOf="@id/tvOtherUserName"
-                app:layout_constraintTop_toTopOf="@id/ivProfileImage" />
+                app:layout_constraintTop_toTopOf="@id/ivOtherUserProfileImage" />
 
             <ImageButton
                 android:id="@+id/btnAudioCall"
