--- a/app/src/main/res/layout/item_text_only_private_message_receiver.xml
+++ b/app/src/main/res/layout/item_text_only_private_message_receiver.xml
@@ -43,6 +43,16 @@
                 android:textColor="@color/black"
                 android:textSize="12sp" />
 
+            <TextView
+                android:id="@+id/tvIsTextEdited"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginTop="3dp"
+                tools:text="Edited"
+                android:textColor="@color/black"
+                android:textSize="11sp" />
+
         </LinearLayout>
     </LinearLayout>
 </layout>
