--- a/app/src/main/res/layout/fragment_chats_home.xml
+++ b/app/src/main/res/layout/fragment_chats_home.xml
@@ -6,17 +6,29 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bw_background"
+        android:fitsSystemWindows="true"
+        android:background="@drawable/main_activity_bg"
         tools:context=".features.chats.ui.ChatsHomeFragment">
+
+        <include
+            android:id="@+id/incToolBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            layout="@layout/search_toolbar"
+            app:layout_constraintBottom_toTopOf="@id/rvChatList"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvChatList"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/bw_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/incToolBar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
